@@ -1,5 +1,14 @@
 2015-04-10  Pedro Alves  <palves@redhat.com>
 
+	* infrun.c (displaced_step_fixup): Switch to the event ptid
+	earlier.  If the thread stopped for a watchpoint and the
+	target/arch has non-continuable watchpoints, cancel the displaced
+	step.
+	(resume): Don't start a displaced step if in-line step-over info
+	is valid.
+
+2015-04-10  Pedro Alves  <palves@redhat.com>
+
 	* infrun.c (displaced_step_in_progress): New function.
 	(do_target_resume): Advise target to report all signals if
 	displaced stepping.
